--- a/src/view/frontend/templates/layers.phtml
+++ b/src/view/frontend/templates/layers.phtml
@@ -62,83 +62,7 @@ $facets = $ssr->getFacets();
         class="block-content filter-content hidden md:block pt-4"
         :class="{ 'hidden': !blockOpen }"
     >
-        <template x-if="hasActiveFilters">
-            <div
-                x-data="{ open: true }"
-                class="filter-current bg-white border border-gray-300 p-4 md:px-8 md:mt-4 mb-4"
-            >
-                <h3 id="active-filtering-heading">
-                    <button
-                        type="button"
-                        @click="open = !open"
-                        class="w-full filter-options-title flex justify-between items-center text-start cursor-pointer"
-                        aria-controls="active-filtering-content"
-                        :aria-expanded="open"
-                        x-init="$nextTick(() => $el.focus())"
-                    >
-                        <strong><?= $escaper->escapeHtml(__('Active filtering')) ?></strong>
-                        <span class="py-1 px-1 rounded border border-gray-300">
-                            <?= $heroicons->chevronDownHtml(
-                                'transition-transform transform duration-300 ease-in-out',
-                                24,
-                                24,
-                                [
-                                    ":class" => "{ 'rotate-180': open }",
-                                    "aria-hidden" => "true",
-                                    "focusable" => "false"
-                                ]
-                            ); ?>
-                        </span>
-                    </button>
-                </h3>
-                <div
-                    id="active-filtering-content"
-                    class="items pt-1 pb-3 space-y-1"
-                    x-show="open"
-                    aria-labelledby="active-filtering-heading"
-                    role="region"
-                >
-                    <template
-                        x-for="activeFilter in activeFilters"
-                        :key="activeFilter.facetCode + '-' + activeFilter.value"
-                    >
-                        <div class="item flex justify-between items-center">
-                            <span>
-                                <span
-                                    class="filter-label block text-sm font-medium"
-                                    x-text="getFacetLabel(activeFilter.facetCode)"
-                                ></span>
-                                <span
-                                    class="filter-value text-sm block"
-                                    x-text="getFacetOptionLabel(activeFilter.facetCode, activeFilter.value)"
-                                ></span>
-                            </span>
-                            <button
-                                type="button"
-                                class="py-2 px-2 text-center block action remove text-fg-secondary hover:text-fg"
-                                @click="$store.meilisearch.toggleFacet(activeFilter.facetCode, activeFilter.value)"
-                                :title="removeFilterTitle(activeFilter)"
-                                :aria-label="removeFilterTitle(activeFilter)"
-                            >
-                                <?= $heroicons->trashHtml('', 20, 20, ["aria-hidden" => "true"]); ?>
-                            </button>
-                        </div>
-                    </template>
-                </div>
-                <div
-                    class="block-actions filter-actions"
-                    x-show="open"
-                >
-                    <button
-                        type="button"
-                        class="text-sm text-fg-secondary hover:text-fg"
-                        @click="$store.meilisearch.clearAllFacets()"
-                    >
-                        <?= $escaper->escapeHtml(__('Clear All')) ?>
-                    </button>
-                </div>
-            </div>
-        </template>
+        <?= $block->getChildHtml('meilisearch.frontend.layers.active') ?>
         <?php foreach ($facets as $facet) : ?>
             <div
                 class="filter-option card my-4"
@@ -208,150 +132,14 @@ $facets = $ssr->getFacets();
                         :id="`${id}-content`"
                         class="filter-options-content pt-3 space-y-1"
                     >
-                        <?= $block->getChildHtml('meilisearch.frontend.layers.swatch') ?>
-                        <?= $block->getChildHtml('meilisearch.frontend.layers.checkbox') ?>
+                        <?= $block->getChildHtml('meilisearch.frontend.layers.type.swatch') ?>
+                        <?= $block->getChildHtml('meilisearch.frontend.layers.type.checkbox') ?>
+                        <?= $block->getChildHtml('meilisearch.frontend.layers.type.slider') ?>
                     </div>
                 </template>
             </div>
         </template>
     </div>
 </div>
-
-<script>
-    function initMeilisearchLayeredSwatch() {
-        return {
-            activeTooltipItem: false,
-            tooltipPositionElement: false,
-
-            getSwatchType(typeNumber) {
-                switch ("" + typeNumber) {
-                    case '1':
-                        return "color";
-                    case '2':
-                        return "image";
-                    case '0':
-                    default:
-                        return "text";
-                }
-            },
-
-            getSwatchBackgroundStyle(type, value, image) {
-                if (this.getSwatchType(type) === "color") {
-                    return 'background-color:' + value;
-                } else if (this.getSwatchType(type) === "image") {
-                    return "background: #ffffff url('" + image + "') no-repeat center";
-                } else {
-                    return '';
-                }
-            },
-
-            isTooltipVisible() {
-                return this.activeTooltipItem;
-            },
-
-            isFirstItemCol() {
-                const left = this.tooltipPositionElement.offsetLeft;
-                const leftParent = this.tooltipPositionElement.parentNode.offsetLeft;
-                const width = this.tooltipPositionElement.offsetWidth;
-                return left - leftParent < width;
-            },
-
-            getTooltipImageStyle() {
-                const type = this.activeTooltipItem.type;
-
-                if (this.getSwatchType(type) === "color") {
-                    return 'background-color:' + this.activeTooltipItem.value + '; width: 110px; height: 90px;';
-                } else if (this.getSwatchType(type) === "image") {
-                    return "background: #ffffff url('" + this.activeTooltipItem.thumb +
-                        "') center center no-repeat; width: 110px; height: 90px;";
-                } else {
-                    return 'display:none';
-                }
-            },
-
-            getTooltipPosition() {
-                return this.tooltipPositionElement
-                    ? (
-                        `top: ${this.tooltipPositionElement.offsetTop}px;` +
-                        `left: ${this.tooltipPositionElement.offsetLeft}px;`
-                    )
-                    : '';
-            },
-
-            getTooltipLabel() {
-                return this.activeTooltipItem.label || '';
-            },
-
-            isVisualSwatch() {
-                return this.getSwatchType(this.activeTooltipItem.type) !== 'text';
-            }
-        }
-    }
-
-    function meilisearchLayeredNavigation() {
-        return {
-            isMobile: false,
-            blockOpen: true,
-
-            get hasActiveFilters() {
-                const selected = this.$store.meilisearch.state.selectedFacets || {};
-                return Object.keys(selected).some(code => (selected[code] || []).length > 0);
-            },
-
-            get activeFilters() {
-                const selected = this.$store.meilisearch.state.selectedFacets || {};
-                const result = [];
-
-                Object.entries(selected).forEach(([facetCode, values]) => {
-                    (values || []).forEach((value) => {
-                        result.push({ facetCode, value });
-                    });
-                });
-
-                return result;
-            },
-
-            getFacetLabel(code) {
-                const facets = this.$store.meilisearch.getAvailableFacets
-                    ? this.$store.meilisearch.getAvailableFacets()
-                    : [];
-                const facet = facets.find((f) => f.code === code);
-                return facet ? facet.label : code;
-            },
-
-            getFacetOptionLabel(code, value) {
-                const facets = this.$store.meilisearch.getAvailableFacets
-                    ? this.$store.meilisearch.getAvailableFacets()
-                    : [];
-                const facet = facets.find((f) => f.code === code);
-                if (!facet) {
-                    return value;
-                }
-
-                const option = facet.options.find(
-                    (o) => String(o.value) === String(value)
-                );
-
-                return option ? option.label : value;
-            },
-
-            removeFilterTitle(activeFilter) {
-                const facetLabel = this.getFacetLabel(activeFilter.facetCode);
-                const optionLabel = this.getFacetOptionLabel(activeFilter.facetCode, activeFilter.value);
-
-                return '<?= $escaper->escapeJs(__('Remove active %1 filter: %2')) ?>'
-                    .replace('%1', facetLabel)
-                    .replace('%2', optionLabel);
-            },
-
-            checkIsMobileResolution() {
-                const mobileElement = this.$refs.LayeredNavigationMobileToggleIcon;
-                this.isMobile = mobileElement
-                    ? getComputedStyle(mobileElement).display !== "none"
-                    : window.matchMedia('(max-width: 767px)').matches;
-
-                this.blockOpen = !this.isMobile;
-            }
-        }
-    }
-</script>
+<?= $block->getChildHtml('meilisearch.frontend.layers.js.layers') ?>
+<?= $block->getChildHtml('meilisearch.frontend.layers.js.slider') ?>
