--- a/src/view/frontend/templates/layers/type/checkbox.phtml
+++ b/src/view/frontend/templates/layers/type/checkbox.phtml
@@ -1,4 +1,4 @@
-<template x-if="!facet.isSwatch">
+<template x-if="!facet.isSwatch && (facet.type === 'multiselect' || facet.type === 'select')">
     <div class="items">
         <template
             x-for="option in facet.options"
